--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["eslint:recommended", "airbnb", "prettier", "prettier/react"],
+  "extends": ["eslint:recommended", "airbnb", "prettier"],
   "plugins": ["react-hooks"],
   "env": {
     "browser": true
@@ -18,6 +18,8 @@
     "react-hooks/exhaustive-deps": "warn",
     "arrow-body-style": [0],
     "prefer-arrow-callback": [0],
-    "import/no-extraneous-dependencies": "off"
+    "import/no-extraneous-dependencies": "off",
+    "react/function-component-definition": "off",
+    "no-unused-vars": "warn"
   }
 }
