--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
     "prefer-arrow-callback": [0],
     "import/no-extraneous-dependencies": "off",
     "react/function-component-definition": "off",
-    "no-unused-vars": "warn"
+    "no-unused-vars": "warn",
+    "react/jsx-no-constructed-context-values": "off"
   }
 }
